--- a/src/styles/module/Index.module.css
+++ b/src/styles/module/Index.module.css
@@ -326,6 +326,7 @@
     align-content: center;
     flex-direction: row;
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .second_section_wrapper {
     color: white;
@@ -457,7 +458,104 @@
 
 /* THIRD */
 .third_section {
-    color: white;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     width: 100%;
-    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    align-content: center;
+}
+.third_section_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-direction: row;
+    width: 100%;
+    gap: 8rem;
+}
+.third_text { 
+    display: flex;
+    text-align: justify;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: center;
+}
+.third_text > h2 {
+    font-weight: 900;
+    font-size: xx-large;
+    transition: .3s;
+    text-align: center;
+    color: white;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+
+}
+.third_text > p { 
+    text-align: -webkit-match-parent !important;
+    font-weight: 400;
+    font-size: small;
+    transition: .3s;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.774);
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+.third_gifs {
+  
+}
+.third_gifs > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+.divider {
+    background: gray;
+    height: 1px;
+    width: 100%;
+}
+.fourth_section {
+    width: 100%;
+    margin-bottom: 2rem;
+}
+.fourth_section_wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    margin-top: 2rem;
+    gap: 3rem;
+}
+.fourth_section_text { 
+    text-align: -webkit-match-parent !important;
+    font-weight: 400;
+    font-size: small;
+    transition: .3s;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.774);
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    align-content: center;
+    gap: 15px;
+}
+.fourth_section_textt {
+    color: #bfc500;
+    text-align: justify;
+    font-size: 1em;
+    margin: 0;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5;
 }
