--- a/src/styles/module/Index.module.css
+++ b/src/styles/module/Index.module.css
@@ -206,7 +206,49 @@
     align-content: center;
     flex-direction: column;
 }
+.mobile_container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
 
+.mobile_wraper{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    color: white;
+    justify-content: center;
+    flex-direction: row;
+}
+.mobile_links{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+}
+.mobile_logo {
+    width: 70%;
+    display: flex;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+}
+.mobile_logo > img{
+    width: 190px;
+    height: auto;
+}
+.mobile_menu {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    align-content: center;
+}
 .links{
     width: 100%;
     display: flex;
@@ -216,7 +258,11 @@
     align-content: center;
 }
 .header_logo{
-    width: 25%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 .header_logo > img{
     width: 190px;
