--- a/src/styles/module/Index.module.css
+++ b/src/styles/module/Index.module.css
@@ -249,6 +249,60 @@
     justify-content: flex-end;
     align-content: center;
 }
+.modal_container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: #000;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.modal_wrapper {
+    width: 90%;
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    align-items: center;
+    color: white;
+    height: 100%;
+    background: #000;
+}
+.mobile_ancla {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    gap: 30px;
+}
+.mobile_ancla > a {
+    text-decoration: none;
+    color: #fff;
+    font-size: xx-small;
+    font-style: italic;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+    caret-color: transparent;
+    text-align: end;
+}
+.mobile_ancla > a > p {
+    color: white;
+}
+.mobile_ancla a> p:hover {
+    text-decoration: none;
+    color: #9A8000;
+    font-size: small;
+    font-style: italic;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+    caret-color: transparent;
+    text-align: end;
+}
+
 .links{
     width: 100%;
     display: flex;
