--- a/src/styles/module/Index.module.css
+++ b/src/styles/module/Index.module.css
@@ -122,6 +122,31 @@
         height: auto;
     }
     
+    
+}
+@media (max-width: 640px) {
+    .footer_wrapper {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        flex-direction: column !important;
+    }
+    .footer_copyright {
+        color: #eeeeeeb0;
+        text-align: left;
+        font-size: smaller;
+        margin: 0;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        font-weight: 600;
+        line-height: 1.5;
+        display: flex;
+        flex-direction: column;
+        align-items: center !important;
+        justify-content: center;
+        align-content: center;
+    }
 }
 @media (max-width: 500px) {
     .second_section{
@@ -179,6 +204,16 @@
         align-content: center;
         flex-direction: row;
     }
+    .footer_container {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+ 
 }
 .header {
     width: 100%;
@@ -831,7 +866,7 @@
     line-height: 1.5;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: center;
     align-content: center;
 }
