links actualizados y footer en dispositivo mobile

--- a/src/styles/module/Index.module.css
+++ b/src/styles/module/Index.module.css
@@ -147,6 +147,13 @@
         justify-content: center;
         align-content: center;
     }
+    .footer_text {
+        display: none;
+
+    }
+    .footer_image {
+        display: none !important;
+    }
 }
 @media (max-width: 500px) {
     .second_section{
@@ -353,7 +360,7 @@
     align-content: center;
     align-items: center;
 }
-.header_logo > img{
+.header_logo > a > img{
     width: 190px;
     height: auto;
 }
@@ -896,7 +903,7 @@
     justify-content: center;
     align-content: center;
 }
-.footer_logo > img{
+.footer_logo > a > img{
     width: 190px;
     height: auto;
 }
